# theater-cast-scheduler

./: .gitignore  LICENSE  README.md  deploy.sh  dev.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/cli/: __init__.py  query_health.py
backend/app/core/: config.py  csv_export.py  pagination.py  time.py
backend/migrations/: env.py
backend/scripts/: complete_performances.py
backend/tests/: auth_helpers.py  conftest.py  test_actor_accounts.py  test_actor_leaves.py  test_actor_notifications.py  test_admin_api.py  test_admin_imports.py  test_admin_scope.py  test_admin_scope_models.py  test_admin_security_api.py  test_ai_parser.py  test_api_smoke.py  test_business_corrections.py  test_calendar.py  test_daily_schedule_publishing.py  test_designation_correction_models.py  test_designation_lifecycle.py  test_designation_workspace.py  test_designation_workspace_api.py  test_designation_workspace_schemas.py  test_entitlement_binding_policy.py  test_entitlements.py  test_entitlements_api.py  test_import_parser.py  test_login_protection.py  test_migration_files.py  test_models.py  test_monthly_plan_api.py  test_pagination.py  test_performance_boards.py  test_performance_boards_api.py  test_performance_fulfillment.py  test_phase_three_contracts.py  test_query_diagnostics.py  test_query_health_cli.py  test_rules.py  test_runtime_safety.py  test_scheduler.py  test_scheduling_api.py  test_sms_notifications.py  (+4 more)
backend/theater_cast_scheduling_backend.egg-info/: SOURCES.txt  requires.txt
(+221 files in other folders)
